# Coding-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-loop.md  architecture.md  evaluation.md  iteration-log.md  permission-model.md  prompt-design.md  provider-abstraction.md  tool-system.md  web-ui.md
docs/decisions/: 0001-language-and-runtime.md  0002-llm-backend.md  0003-tool-protocol.md  0004-permission-model.md  0005-subagent-design.md  0006-prompt-cache.md  0007-streaming-dispatch.md  0008-mcp.md  0009-bash-sandbox.md  0010-plugins.md  0011-web-ui.md
docs/eval-reports/: anthropic-cache-test.json  baseline-claude-haiku-4.5.json  baseline-gpt-5-mini.json  final-claude-haiku-4.5.json  final-gpt-5-mini.json  final-report.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  store.ts  types.ts  useWebSocket.ts
frontend/src/components/: Button.tsx  ChatView.tsx  CommandPalette.tsx  Composer.tsx  ConfirmDialog.tsx  CopyButton.tsx  Logo.tsx  Markdown.tsx  PermissionModal.tsx  Sidebar.tsx  Toaster.tsx  ToolCard.tsx  TopBar.tsx
frontend/src/lib/: theme.ts  utils.ts
scripts/: eval.sh  secret_scan.py
src/coding_agent/: __init__.py  __main__.py  plugins.py
src/coding_agent/agent/: __init__.py  compaction.py  context.py  loop.py  orchestrator.py  prompts.py
src/coding_agent/cli/: __init__.py  app.py  confirm.py  prompt.py  render.py  repl.py  slash_commands.py
src/coding_agent/core/: __init__.py  config.py  errors.py  logging.py  session.py  tokens.py  types.py
src/coding_agent/evals/: __init__.py  cli.py  runner.py  task.py
src/coding_agent/evals/tasks/: 01-create-file.json  02-edit-file.json  03-create-project.json  04-fix-bug.json  05-search-and-report.json  06-rename-function.json  07-add-docstrings.json  08-run-and-fix.json  09-write-readme.json  10-implement-class.json
src/coding_agent/mcp/: __init__.py  client.py  server.py
src/coding_agent/providers/: anthropic.py  base.py  deepseek.py  moonshot.py  openai.py  openai_compat.py  qwen.py  registry.py
src/coding_agent/security/: __init__.py  audit.py  command_guard.py  path_guard.py  permissions.py  rules.py  secrets.py
src/coding_agent/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  ls.py  read.py  task.py  todo_write.py  write.py
src/coding_agent/web/: __init__.py  protocol.py  routes.py  runner.py  server.py
src/coding_agent/web/static/: index.html
src/coding_agent/web/static/assets/: index-CGjiuM3L.js  index-lqBf6aYg.css
tests/: conftest.py
tests/integration/: test_agent_advanced.py  test_agent_loop.py  test_compaction_e2e.py  test_mcp_client.py  test_streaming_dispatch.py  test_subagent.py  test_web_e2e.py
tests/unit/: test_audit.py  test_audit_chain.py  test_bash_docker.py  test_command_guard.py  test_config.py  test_context_compaction.py  test_diff_undo_sessions.py  test_errors.py  test_evals.py  test_grep_fallback.py  test_mcp.py  test_orchestrator.py  test_path_guard.py  test_permissions.py  test_plugins.py  test_provider_anthropic.py  test_provider_openai_compat.py  test_provider_registry.py  test_rules.py  test_secrets.py  test_session.py  test_slash_commands.py  test_tokens.py  test_tools_base.py  test_tools_edit_glob_grep_bash.py  test_tools_rw_ls.py  test_tools_todo_task.py  test_web_protocol.py  test_web_routes.py  test_web_runner.py
