[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "coding-agent"
version = "0.1.0"
description = "A production-grade terminal coding agent inspired by Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Coding Agent Course Project" }]
keywords = ["llm", "agent", "coding", "deepseek", "tool-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "openai>=1.40",
    "anthropic>=0.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "typer>=0.12",
    "structlog>=24.1",
    "tiktoken>=0.7",
    "tenacity>=8.2",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "platformdirs>=4.2",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "respx>=0.21",
]
mcp = [
    "mcp>=1.2",
]
docker = [
    "docker>=7.1",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
]
all = [
    "mcp>=1.2",
    "docker>=7.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
]

[project.scripts]
coding-agent = "coding_agent.cli.app:main"
cagent = "coding_agent.cli.app:main"
coding-agent-mcp = "coding_agent.mcp.server:main"

[project.urls]
Homepage = "https://github.com/example/coding-agent"
Documentation = "https://github.com/example/coding-agent/blob/main/docs/architecture.md"
Source = "https://github.com/example/coding-agent"
Issues = "https://github.com/example/coding-agent/issues"
Changelog = "https://github.com/example/coding-agent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/coding_agent/web/static" = "coding_agent/web/static"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "scripts/",
    "frontend/src/",
    "frontend/public/",
    "frontend/index.html",
    "frontend/package.json",
    "frontend/pnpm-lock.yaml",
    "frontend/vite.config.ts",
    "frontend/tsconfig.json",
    "frontend/tsconfig.node.json",
    "frontend/tailwind.config.ts",
    "frontend/postcss.config.js",
    "frontend/components.json",
    "README.md",
    "CHANGELOG.md",
    "CLAUDE.md",
    "AGENTS.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in defaults (Typer pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tiktoken.*", "prompt_toolkit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_api: tests that require a real LLM API key (skipped by default)",
    "slow: slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/coding_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
